upload url discovery service
